testsuite/tests/splice-imports/SI03.stderr
SI03.hs:10:11: error: [GHC-28914]
    • Level error: ‘sid’ is bound at level 0 but used at level -1
    • Available from the imports:
      • imported from ‘SI01A’ at SI03.hs:5:1-12
    • In the untyped splice: $(sid [| pure () |])

